--- a/content/about.html
+++ b/content/about.html
@@ -64,8 +64,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="common header">
-                            <img src="../Images/hazel.jpg" alt="The Partlow's" class="image"> 
-                            <img src="../Images/snowsmile.jpg" alt="JP Holding Hazel" class="image">                           
+                            <img src="../images/hazel.jpg" alt="The Partlow's" class="image"> 
+                            <img src="../images/snowsmile.jpg" alt="JP Holding Hazel" class="image">                           
                             <!-- Resume -->
                             <ol>
                                 <li id="edu" class="resumeListHeadings"> 
