--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--Joshua Partlow last edited December 16, 2021-->
+<!--Joshua Partlow last edited December 17, 2021-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -42,7 +42,7 @@
                         <div class="site-heading">
                             <h1>Joshua (JP) Partlow</h1>
                             <span class="subheading">A Student, Husband, Father, Chef</span>
-                            <img src="Images/steak.jpg" alt="Steak" height="300px">
+                            <img src="images/steak.jpg" alt="Steak" height="300px">
                         </div>
                     </div>
                 </div>
